# trunk-recorder

./: .gitignore  CALL-ALERT-PATCH.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile.call-alert  README.md  mongo-import.js
.claude/: settings.json
.github/workflows/: main.yml  sync-docs-trigger.yml
bench/: README.md  analyze.py  plot.py  run_overnight.sh  setup_worktrees.sh
docs/: CONFIGURE.md  Plugins.md  SQUELCH.md  TONE-SQUELCH.md  intro.md
docs/Install/: INSTALL-MAC.md  INSTALL-PI.md
docs/Notes/: VOCODER-IMPROVEMENTS.md
docs/plugins/: broadcastify-calls.md  openmhz.md  rdio-scanner.md  simplestream.md  stat-socket.md  unit-script.md
examples/: config-airband.json  config-dmr-trunked.json  example-launchagent.plist  trunk-recorder.service
patches/: simplestream-dangling-pointer.patch
plugins/bench_logger/: CMakeLists.txt  bench_logger.cc
plugins/broadcastify_uploader/: broadcastify_uploader.cc
plugins/openmhz_uploader/: openmhz_uploader.cc
plugins/simplestream/: simplestream.cc
plugins/whisper_transcribe/: CMakeLists.txt  whisper_transcribe.cc
trunk-recorder/: autotune.cc  autotune.h  call_conventional.cc  call_conventional.h  call_impl.cc  call_impl.h  config.cc  config.h  config_service.cc  config_service.h  formatter.cc  global_structs.h  main.cc  monitor_systems.cc  monitor_systems.h  setup_systems.cc  source.cc  source.h  talkgroup.cc  talkgroup.h  talkgroups.cc  tone_manager.cc  tone_manager.h  unit_tags.cc
utils/: VOCODER-TUNING.md  analyze_vocoder.py  blind_compare.py  fetch_recent_wavs.py  imbe_tune.cc  rank_sweep.py  sweep-all.json  sweep.json
(+79 files in other folders)
